c/examples/writing-a-c-compiler-tests/tests/chapter_17/invalid_types/incomplete_types/subscript_void.c
// you can't subscript pointers to incomplete types
// although Clang/GCC let you subscript void * as a language extension
int main(void) {
  int x = 10;
  void *v = &x;
  v[0];
  return 0;
}